--- a/sass/main.css
+++ b/sass/main.css
@@ -423,11 +423,16 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+}
+
+.skills__skillBox:not(:last-child) {
+  margin-right: 15rem;
 }
 
 .footer {
